# rustnl2025

./: .gitignore  CNAME  README.md  astro.config.mjs  package.json  pagefind.yml  tsconfig.json
.github/workflows/: deploy.yml
src/2024-pages/: boat.astro  directions.md  health-brief.md  industry.astro  live.astro  speakers.astro  unconf.astro  workshops.astro
src/components/: Button.astro  ButtonGroup.astro  DefaultSection.astro  Discord.astro  Divider.astro  Icon.astro  Location.astro  LocationDusMix.astro  LocationDusRooms.astro  LocationDusVenue.astro  Markdown.astro  OneColumnText.astro  Stream.astro  Timetable.astro  TimetableBlock.astro  TimetableDivider.astro  TimetableItem.astro  TimetableMultiItem.astro  TimetableTuesday.astro  TimetableWednesday.astro  footer.astro  head.astro  header.astro  menu.astro  sponsor.astro  useTalks.ts
src/layouts/: AboutLayout.astro  AccessibilityLayout.astro  BoatLayout.astro  CommonLayout.astro  EventLayout.astro  HomeLayout.astro  IndustryLayout.astro  KioskLayout.astro  LiveLayout.astro  LiveStreamLayout.astro  MarkdownLayout.astro  PageLayout.astro  ScheduleLayout.astro  SpeakersLayout.astro  TalkLayout.astro  UnconfIntroLayout.astro  UnconfLayout.astro  WorkshopLayout.astro
src/pages/: 10-years-rust.astro  about.astro  accessibility.md  activities.astro  all-hands.astro  allhands-faq.md  bus.md  celebration.astro  code-of-conduct.md  covid-policy-all-hands-and-unconf.md  dus.md  getting-there.md  hotels.astro  (+21 more)
src/pico/: Cargo.toml  Embed.toml  rp235x_riscv.x
src/pico/.cargo/: config.toml
src/pico/src/: main.rs
(+178 files in other folders)
