[package]
name = "pico"
version = "0.1.0"
edition = "2024"
build = "build.rs"

[dependencies]
cortex-m = "0.7"
cortex-m-rt = "0.7"
cortex-m-rtic = "1"

rp235x-hal = {version = "0.3", features = ["binary-info", "critical-section-impl", "rt", "defmt"]}
defmt = "1"
defmt-rtt = "1"
embedded-hal = "1.0.0"
panic-halt = "1"
critical-section = "1"

